--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section>
             <h2>About Bio-Mech</h2>
             <p>In conjunction with my passion for volleyball, I am excited to introduce my fictional business,
-                **Bio-Mech**. Bio-Mech specializes in developing innovative sports technology aimed at enhancing
+                Bio-Mech. Bio-Mech specializes in developing innovative sports technology aimed at enhancing
                 athletic performance and injury prevention for volleyball players. Our mission is to empower athletes
                 with the tools they need to excel in their sport.</p>
             <p>At Bio-Mech, we create advanced wearable devices that monitor players' biomechanics during practice and
