--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Volleyball & Bio-Mech: Innovating Sports</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- <script src="script/script.js" defer></script> -->
+   <script src="script/stringsOperatorsLoops.js" defer></script>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="section">
             <h2>About Volleyball</h2>
             <p>Volleyball is more than just a sport for me; it's a passion that has shaped my life. I remember my first
                 time stepping onto the court, the thrill of the game quickly captivated me. The teamwork, strategy, and
@@ -35,7 +36,7 @@
                 serve, and celebrating victories with my teammates. Volleyball has become an integral part of my
                 identity, and I am constantly inspired by its dynamic nature.</p>
         </section>
-        <section>
+        <section class="section">
             <h2>About Bio-Mech</h2>
             <p>In conjunction with my passion for volleyball, I am excited to introduce my fictional business,
                 Bio-Mech. Bio-Mech specializes in developing innovative sports technology aimed at enhancing
@@ -49,9 +50,9 @@
                 revolutionize the way volleyball is played and trained. Our team is dedicated to supporting volleyball
                 players at all levels, from beginners to professionals, in their pursuit of excellence.</p>
         </section>
-        <section>
+        <section class="section">
             <h2>Our Products</h2>
-            <ul>
+            <ul class="event-list">
                 <li>Biomechanical Wearable Sensors: Track your movements and receive instant feedback.</li>
                 <li>Smart Volleyballs: Analyze your hits and serves for improved performance.</li>
                 <li>Personalized Training Apps: Tailored workouts based on your performance data.</li>
@@ -59,10 +60,10 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="section">
             <h2>Upcoming Events</h2>
             <p>Join us for exciting volleyball events and workshops hosted by Bio-Mech:</p>
-            <ul>
+            <ul class="event-list">
                 <li>Volleyball Skills Workshop - Date: September 10, 2023</li>
                 <li>Bio-Mech Product Launch - Date: October 15, 2023</li>
                 <li>Annual Volleyball Festival - Date: November 5-7, 2023</li>
