--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Volleyball & Bio-Mech: Innovating Sports</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="/josuacolladoMastery1-main/sript/script.js" defer></script>
-    <script src="/josuacolladoMastery1-main/sript/stringsOperatorsLoops.js" defer></script>
-    <script src="/josuacolladoMastery1-main/sript/evenOrOdd.js" defer></script>
+    <!-- <script src="sript/script.js" defer></script> -->
+    <!-- <script src="sript/stringsOperatorsLoops.js" defer></script> -->
+    <script src="sript/evenOrOdd.js" defer></script>
 </head>
 
 <body>
