--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Volleyball & Bio-Mech: Innovating Sports</title>
     <link rel="stylesheet" href="css/styles.css">
-    <!-- <script src="script/script.js" defer></script> -->
-   <script src="script/stringsOperatorsLoops.js" defer></script>
+    <script src="/sript/arrayTryCatch.js" defer></script>
+    <!-- <script src="/sript/script.js" defer></script>
+    <script src="/sript/stringsOperatorsLoops.js" defer></script>
+    <script src="/sript/evenOrOdd.js" defer></script> -->
 </head>
 
 <body>
