--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Volleyball & Bio-Mech: Innovating Sports</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="/josuacolladoMastery1-main/sript/script.js" defer></script>
-    <script src="/josuacolladoMastery1-main/sript/stringsOperatorsLoops.js" defer></script>
-    <script src="/josuacolladoMastery1-main/sript/evenOrOdd.js" defer></script>
+    <!-- <script src="sript/script.js" defer></script> -->
+    <!-- <script src="sript/stringsOperatorsLoops.js" defer></script> -->
+    <!-- <script src="sript/evenOrOdd.js" defer></script> -->
+    <!-- <script src="sript/arrayTryCatch.js" defer></script> -->
 </head>
 
 <body>
@@ -16,12 +17,12 @@
         <h1>Welcome to Volleyball & Bio-Mech</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">About Volleyball</a></li>
                 <li><a href="#">About Bio-Mech</a></li>
                 <li><a href="#">Products</a></li>
                 <li><a href="#">Events</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contactUs.html">Contact</a></li>
             </ul>
         </nav>
     </header>
