--- a/manipulatingDOM.html
+++ b/manipulatingDOM.html
@@ -7,7 +7,7 @@
     <title>Manipulating the DOM</title>
     <script src="sript/scriptsDOM.js" async></script>
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i,900,900i" type="text/css" media="all">
-    <link rel="stylesheet" href="CSS/styleDOM.css">
+    <link rel="stylesheet" href="css/styleDOM.css">
 
 
 </head>
