--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="#">Products</a></li>
                 <li><a href="#">Events</a></li>
                 <li><a href="contactUs.html">Contact</a></li>
+                <li><a href="manipulatingDOM.html">DOM</a></li>
             </ul>
         </nav>
     </header>
