--- a/contactUs.html
+++ b/contactUs.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <header>
-        <h1>Welcome to Volleyball & Bio-Mech Contact Page</h1>
+   <header>
+        <h1>Welcome to Volleyball & Bio-Mech</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,6 +20,7 @@
                 <li><a href="#">Products</a></li>
                 <li><a href="#">Events</a></li>
                 <li><a href="contactUs.html">Contact</a></li>
+                <li><a href="manipulatingDOM.html">DOM</a></li>
             </ul>
         </nav>
     </header>
