--- a/contactUs.html
+++ b/contactUs.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-   <header>
+    <header>
         <h1>Welcome to Volleyball & Bio-Mech</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">About Volleyball</a></li>
                 <li><a href="#">About Bio-Mech</a></li>
-                <li><a href="#">Products</a></li>
+                <li><a href="product.html">Products</a></li>
                 <li><a href="#">Events</a></li>
                 <li><a href="contactUs.html">Contact</a></li>
                 <li><a href="manipulatingDOM.html">DOM</a></li>
