--- a/product.html
+++ b/product.html
@@ -56,8 +56,14 @@
                 <input type="radio" name="size" value="20"> Large - $20
             </label><br>
 
+            <label>data:</label>
+            <input input type="date"" id="quantity" name="quantity" min="1" required>
+
             <label for="quantity">Quantity:</label>
             <input type="number" id="quantity" name="quantity" min="1" required>
+
+            <label >New disgin file:</label>
+            <input input type="file" id="quantity" name="quantity" min="1">
 
             <button type="reset" id="resetButton">Reset</button>
             <button type="submit">Submit</button>
